/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package hbase.test.pb;

// Coprocessor test
option java_package = "org.apache.hadoop.hbase.coprocessor.protobuf.generated";
option java_outer_classname = "ColumnAggregationWithNullResponseProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

// use unique names for messages in ColumnAggregationXXX.protos due to a bug in
// protoc or hadoop's protoc compiler.
message ColumnAggregationNullResponseSumRequest {
  required bytes family = 1;
  optional bytes qualifier = 2;
}

message ColumnAggregationNullResponseSumResponse {
  optional int64 sum = 1;
}

service ColumnAggregationServiceNullResponse {
  rpc sum(ColumnAggregationNullResponseSumRequest)
    returns(ColumnAggregationNullResponseSumResponse);
}
